webview add default message settings over

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,6 +80,9 @@
     <string name="rbdays90">90 days</string>
     <string name="rboff">Off</string>
     <string name="titleMessageDefault">Default message timer</string>
+    <string name="privacyLive">Live location</string>
+    <string name="tvTitleLive">You aren\'t sharing live location in any chats</string>
+    <string name="tvDescriptionLive">Live location requires background location. You can manage this in your device settings.</string>
 
 
 </resources>
