--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,6 +83,9 @@
     <string name="privacyLive">Live location</string>
     <string name="tvTitleLive">You aren\'t sharing live location in any chats</string>
     <string name="tvDescriptionLive">Live location requires background location. You can manage this in your device settings.</string>
+    <string name="fingerprintTitle">Unlock with fingerprint</string>
+    <string name="fingerprintDescription">When enabled you\'ll need to use fingerprint to open WhatsApp. You can Still answer calls if WhatsApp is locked</string>
+    <string name="fingerprintTitlebar">Fingerprint lock</string>
 
 
 </resources>
