--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Last seen</string>
+    <string name="app_name">WhatsApp</string>
     <string name="tbSetting">Settings</string>
     <string name="name">SRINATH</string>
     <string name="user_description">Rest at the End not in the middl...</string>
@@ -15,7 +15,7 @@
     <string name="setting_help_description">Help centre, contact us, privacy policy</string>
     <string name="setting_invite">Invite a friend</string>
     <string name="acPrivacy">Privacy</string>
-    <string name="title_privacy">privacy</string>
+    <string name="title_privacy">Privacy</string>
     <string name="title_security">Security</string>
     <string name="title_verification">Two-step verification</string>
     <string name="title_change_num">Change number</string>
@@ -106,6 +106,8 @@
     <string name="titleRequestAcc">Request account info</string>
     <string name="reqAccItemTitle">Request Sent</string>
     <string name="reqAccItemDescription">Ready by 17 September 2022</string>
+    <string name="cardTitle">Please enter your phone number</string>
+    <string name="cardBtn">OK</string>
 
 
 </resources>
