--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,6 +124,7 @@
     <string name="etTextCountry">India</string>
     <string name="tvDltTitle">To delete your account, confirm your country code and enter your phone number.</string>
     <string name="titleDeleteMyAcc">Delete my account</string>
+    <string name="chatTitle">Chats</string>
 
 
 </resources>
