notification setting fully done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -164,6 +164,7 @@
     <string name="btnBackup">BACK UP</string>
     <string name="chatBackupTime">Local: 8:09 am</string>
     <string name="chatBackupTiming">Google Drive: Never</string>
+    <string name="menuTitleNotification">Rest notification setting</string>
 
 
 </resources>
