--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,6 +174,7 @@
     <string name="storageAudio">Audio</string>
     <string name="storageVideo">Videos</string>
     <string name="storageDocument">Document</string>
+    <string name="photoUploadPopup">Best quality photos are lager and can take longer to send</string>
 
 
 </resources>
