working on help setting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -175,6 +175,7 @@
     <string name="storageVideo">Videos</string>
     <string name="storageDocument">Document</string>
     <string name="photoUploadPopup">Best quality photos are lager and can take longer to send</string>
+    <string name="helpCentre">www.google.com </string>
 
 
 </resources>
