working on help setting completed webviews

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,6 +176,8 @@
     <string name="storageDocument">Document</string>
     <string name="photoUploadPopup">Best quality photos are lager and can take longer to send</string>
     <string name="helpCentre">www.google.com </string>
+    <string name="helpEtHint">Tell us how can help</string>
+    <string name="menuContact">Send via email</string>
 
 
 </resources>
